# qkamber

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  readme.md  renderer.sln
assets/: axis.3ds  ship.3ds
docs/: rasterizer_math.txt
qkamber/: camera.cpp  engine.cpp  engine.h  input_system.h  main.cpp  math3.h  misc.h  platform.h  precompiled.h  renderer.cpp  renderer.h  timer.h
qkamber/asset/: asset_system.h  geometry_loader.cpp  geometry_loader.h  image_loader.h
qkamber/entity/: entity_config.cpp  entity_config.h  entity_system.cpp  entity_system.h  model_component.h  srt_component.h
qkamber/input/: input_system.cpp
qkamber/model/: image_loader.cpp  image_loader.h  mesh.cpp  mesh.h
qkamber/render/: material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  render_buffers.cpp  render_buffers.h  render_cache.cpp  render_cache.h  render_queue.h  render_system.cpp  render_system.h  render_window.h  software_buffers.cpp  software_buffers.h  software_device.cpp  software_device.h
qkamber/resource/: loader.h
qkamber/scene/: camera.cpp  camera.h  light.h  scene_system.cpp  scene_system.h  viewport.cpp  viewport.h
qkamber/software/: software_device.cpp  software_device.h
qkamber/stats/: stats_system.cpp  stats_system.h
qkamber/time/: time_system.cpp  time_system.h
qkamber/win32/: win32_app.cpp  win32_app.h  win32_input_system.cpp  win32_software_device.cpp  win32_software_device.h  win32_window.cpp  win32_window.h
renderer/: app.cpp  app.h  app_window.cpp  app_window.h  camera.cpp  camera.h  engine.cpp  engine.h  input_device.cpp  input_system.cpp  input_system.h  logger.cpp  logger.h  main.cpp  math3.h  mesh.cpp  mesh.h  misc.h  platform.h  precompiled.h  render_buffers.cpp  render_buffers.h  render_primitive.h  render_queue.cpp  render_queue.h  render_window.cpp  render_window.h  renderer.cpp  renderer.h  renderer.rc  renderer.vcxproj  renderer.vcxproj.filters  resource.h  stdafx.h  timer.cpp  timer.h  to_fix_for_vs2010_math3.h  viewport.cpp  viewport.h  window.cpp  (+1 more)
renderer/software/: software_buffers.h  software_device.cpp  software_device.h
renderer/win32/: win32_app.cpp  win32_app.h  win32_app_window.cpp  win32_app_window.h  win32_input_system.cpp  win32_input_system.h  win32_render_device.cpp  win32_render_device.h  win32_software_device.cpp  win32_window.cpp  (+2 more)
src/: engine.cpp  logger.h  main.cpp  math3.h  misc.h  platform.h  precompiled.h  subsystem.h
vsproj/: qkamber.sln  renderer.sln
(+62 files in other folders)
